--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -12,7 +12,7 @@ skillsGained:
 - skill: Умение объяснять концепции реляционных данных в Azure
 - skill: Умение объяснять концепции нереляционных данных в Azure
 - skill: Умение определять компоненты современного хранилища данных в Azure
-learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
+learningPartnersLink: /learn/certifications/partners
 locales:
 - en
 levels:
@@ -55,25 +55,25 @@ outlineSection: |-
   ### Модуль 2&#58; Реляционные данные в Azure
   Слушатели узнают об основах концепций баз данных в облачной среде, получат базовые навыки работы с облачными службами данных и получат базовые знания об облачных службах данных в Microsoft Azure. Слушатели будут изучать предложения реляционных данных, инициализацию и развертывание реляционных баз данных, а также запросы к реляционным данным с помощью решений для облачных данных с помощью Azure.
   #### Уроки
-  - Изучение предложений по реляционным данным в Azure
-  - Изучение инициализации и развертывания предложений реляционных баз данных в Azure
+  - Рассмотрение служб реляционных данных в Azure
+  - Рассмотрение подготовки и развертывания служб реляционных баз данных в Azure
   - Запрос реляционных данных в Azure
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Описывать предложения реляционных данных в Azure
+  - Описание служб реляционных данных в Azure
   - Объяснять подготовку и развертывание реляционных баз данных в Azure
   - Запрашивать реляционные данные с помощью облачных решений для данных в Azure
 
 
   ### Модуль 3&#58; Нереляционные данные в Azure
-  Слушатели изучат основы концепций баз данных в облачной среде, получат базовые навыки работы с облачными службами данных и получат базовые знания об облачных службах данных в Azure. Слушатели будут изучать предложения нереляционных данных, инициализацию и развертывание нереляционных баз данных и хранилищ нереляционных данных с помощью Microsoft Azure.
+  Учащиеся познакомятся с основными понятиями баз данных в среде cloud, получат базовые навыки работы со службами данных cloud и фундаментальные знания служб данных cloud в Azure. Учащиеся рассмотрят службы нереляционных данных, подготовку и развертывание нереляционных баз данных и нереляционных хранилищ данных на Microsoft Azure.
   #### Уроки
-  - Изучение предложений нереляционных данных в Azure
+  - Рассмотрение служб нереляционных данных в Azure
   - Изучение инициализации и развертывания нереляционных служб данных в Azure
   - Управление нереляционными хранилищами данных в Azure
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Описывать предложения нереляционных данных в Azure
+  - Описание служб нереляционных данных в Azure
   - Объяснять подготовку и развертывание нереляционных баз данных в Azure
   - Описывать нереляционные хранилища данных в Azure
 
