--- a/learn-certs-pr/exams/ms-500.yml
+++ b/learn-certs-pr/exams/ms-500.yml
@@ -8,7 +8,7 @@ displayName: MS-500
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен внедряют, управляют и контролируют решения для обеспечения безопасности и соответствия требованиям для Microsoft 365 и гибридных сред. Администратор безопасности Microsoft 365 проактивно защищает корпоративные окружения Microsoft 365, реагирует на угрозы, проводит расследования и обеспечивает управление данными. Microsoft 365 Security Administrator сотрудничает с Microsoft 365 Enterprise Administrator, заинтересованными сторонами в бизнесе и другими администраторами рабочей нагрузки для планирования и реализации стратегий безопасности и обеспечивает соответствие решений политикам и нормам организации.
@@ -30,7 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Внедрение и управление идентификацией и доступом (30-35%)
 - Внедрение и управление защитой от угроз (20-25%)
 - Внедрение и управление защитой информации (15-20%)
