--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -8,11 +8,9 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Данная сертификация будет аннулирована 31 август 2020 года. Вы больше не сможете получить данный сертификат после этой даты. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в<a href="https://aka.ms/certdashboard"> панели Сертификации</a>.</strong><br/><br/></div></div>
+  <div><strong>Эта сертификация была отменена. Для просмотра доступных на данный момент вариантов, пожалуйста, перейдите на <a href="/learn/certifications/browse/">страницу «Обзор сертификаций и экзаменов»</a>. Все сертификаты, полученные вами до дат отмены, будут по-прежнему отражаться в вашей выписке об успеваемости в <a href="https://aka.ms/certdashboard">панели сертификации</a>.</strong><br/><br/></div>
 
   Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365. Кандидаты внедряют компоненты решения, включая усовершенствование приложений, пользовательский интерфейс, системные интеграции, преобразование данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
-
-  <div><strong><br/>В связи с отменой этой сертификации 31 декабря 2020 года Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse.</strong></div>
 subTitle: Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365.
 levels:
 - intermediate
