--- a/learn-certs-pr/power-platform-app-maker.yml
+++ b/learn-certs-pr/power-platform-app-maker.yml
@@ -8,7 +8,18 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></font></div>
 
-  Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
+   Если вы бизнес-специалист с большим опытом работы в области вашего решения и хотите использовать свою страсть к созданию решений Microsoft Power Platform для упрощения, автоматизации и преобразования задач и процессов для своей команды, эта сертификация для вас. Вы должны обладать навыками, необходимыми для выполнения ключевых технических задач бизнес-аналитика, таких как моделирование данных, базовое проектирование взаимодействия с пользователями, анализ требований и анализ процесса. 
+
+  Вы подходите на роль создателя приложений, если вы умеете работать самостоятельно, сосредотачиваться на решении и работать с инструментами для создания Microsoft Power Platform с целью решения бизнес-проблем. У вас может быть опыт работы с Visual Basic for Applications, Excel PivotTables, Teams и другими инструментами. У вас может не быть формального IT-образования, но вам комфортно работать с IT-администраторами и разработчиками Microsoft Power Platform с использованием технологии для решения бизнес-проблем. Вы отвечаете за следующее&#58;  
+  - Разработка и создание приложений и автоматизация рабочих процессов. 
+  - Анализ и визуализация данных в контексте приложения или автоматизированного рабочего процесса. 
+  - Реализация приложений и автоматизированных рабочих процессов и управление ими.
+
+  Чтобы узнать больше, прочтите наш пост&#58; [«Вы создатель приложений Power Platform? Пришло время пройти сертификацию»](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/are-you-a-power-platform-app-maker-now-s-the-time-to-get/ba-p/1512993). Если вам нужно приобрести больше опыта перед попыткой прохождения сертификации, вы можете&#58;
+  - В качестве волонтера поработать над проектом для получения реального опыта моделирования данных, базового проектирования взаимодействия с пользователями, анализа требований и анализа процесса.
+  - Пройти обучение по доступным схемам в Microsoft Learn.
+  - Зарегистрироваться на обучающий курс с инструктором.
+  
 subTitle: Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
 levels:
 - intermediate
