--- a/learn-certs-pr/power-platform-developer-associate.yml
+++ b/learn-certs-pr/power-platform-developer-associate.yml
@@ -8,11 +8,18 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></font></div>
 
-  Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform. Они внедряют компоненты решения, включая усовершенствование приложений, пользовательский интерфейс, системные интеграции, преобразование данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
+  Если вам нравится проектировать, разрабатывать и расширять решения Microsoft Power Platform, а также обеспечивать их безопасность, эта сертификация может быть для вас хорошим решением. Для успешного прохождения этой сертификации вы должны уметь создавать компоненты решения, включая улучшения приложений, собственные способы взаимодействия с пользователями, интеграции систем, преобразование данных, автоматизацию пользовательских процессов и пользовательские визуализации. У вас должны быть хорошие прикладные знания служб Microsoft Power Platform и базовое понимание практик DevOps для Microsoft Power Platform. Более того, у вас должен быть опыт разработки, включающий работу с JavaScript, JSON, TypeScript, C#, HTML, .NET, Azure, Microsoft 365, веб-службами RESTful, ASP.NET и Power BI.
 
-  Кандидаты должны иметь глубокие практические знания о службах Power Platform. Кандидаты также должны иметь глубокое понимание своих возможностей и ограничений. Они должны иметь общее представление о применении DevOps для платформы Power Platform.
+  Кандидаты на эту сертификацию обычно работают с создателями приложений, консультантами по функциональным возможностям, архитекторами решений и IT-администраторами. Ваши обязанности включают следующее&#58;
+  - Создание технических проектов и Power Apps.
+  - Настройка Dataverse, Power Apps и business process automation.
+  - Расширение платформы и взаимодействия с пользователями.
+  - Разработка интеграций.
 
-  Их опыт разработки для этой роли должен включать службы Power Platform, JavaScript, JSON, TypeScript, C#, HTML, .NET, Microsoft Azure, Microsoft 365, веб-службы RESTful, ASP.NET и Power BI.
+  Чтобы узнать больше, ознакомьтесь со следующим нашим постом в блоге&#58; [«Новая сертификация&#58; Microsoft Power Platform Developer Associate»](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/new-certification-microsoft-power-platform-developer-associate/ba-p/1469335). Если вам нужно приобрести больше опыта перед попыткой прохождения сертификации, вы можете&#58;
+  - В качестве волонтера принять участие в проекте по разработке Microsoft Power Platform для получения практического опыта.
+  - Пройти обучение по доступным схемам в Microsoft Learn.
+  - Зарегистрироваться на обучающий курс с инструктором.
 subTitle: Кандидаты на сертификацию Microsoft Power Platform Developer Associate умеют проектировать, разрабатывать, обеспечивать защиту и устранять неполадки решений Power Platform.
 levels:
 - intermediate
