--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -39,30 +39,127 @@ prerequisitesSection: |-
   
   Если вы только начинаете знакомиться с обработкой и анализом данных и машинным обучением, пожалуйста, сначала пройдите курс [«Основы ИИ Microsoft Azure»](/learn/certifications/azure-ai-fundamentals).
 outlineSection: |-
-  ### Модуль 1&#58; Работа с данными в Azure
-  Слушатели узнают о data science и роли Data Scientist.  Затем эти знания понадобятся, чтобы понять, как службы Azure могут поддерживать и расширять процесс обработки данных.
+  ### Модуль 1&#58; Введение в машинное обучение Azure
+  В этом модуле вы узнаете, как подготовить рабочее пространство машинного обучения Azure и использовать его для управления ресурсами машинного обучения, такими как данные, вычисления, учебный код модели, зарегистрированные метрики и подготовленные (обученные) модели. Вы узнаете, как использовать веб-интерфейс студии машинного обучения Azure, а также SDK машинного обучения Azure и инструменты разработчика, такие как Visual Studio Code и Jupyter Notebooks, для работы с активами в рабочей области.
+  
   #### Уроки
-  - Знакомство с Data Science Process
-  - Обзор вариантов  Azure Data Science 
-  - Знакомство с Azure Notebooks
+  - Начало работы с машинным обучением Azure
+  - Инструменты машинного обучения Azure
 
+  #### Лабораторная работа&#58; создание рабочей области машинного обучения Azure
+  
+  #### Лабораторная работа&#58; работа с инструментами машинного обучения Azure
+  
+  После завершения этого модуля вы сможете
+  - Подготовить рабочую область машинного обучения Azure.
+  - Использовать инструменты и код для работы с машинным обучением Azure.
 
-  ### Модуль 2&#58; Работа с данными с помощью службы машинного обучения Azure (Azure Machine Learning)
-  Слушатель узнает, как использовать службу машинного обучения Azure (AML) для автоматизации сквозного процесса обработки данных.
+  ### Модуль 2&#58; Машинное обучение без кода с конструктором
+  Этот модуль знакомит вас с инструментом конструктора - интерфейсом перетаскивания (drag and drop) для создания моделей машинного обучения без написания кода. Вы узнаете, как создать обучающий конвейер, который включает подготовку данных и обучение модели, а затем преобразовать этот обучающий конвейер в конвейер логического вывода, который можно использовать для прогнозирования значений из новых данных, прежде чем окончательно развернуть конвейер логического вывода как службу для использования клиентских приложений.
   #### Уроки
-  - Знакомство со службой AML
-  - Регистрация и внедрение ML моделей в службе AML
+  - Обучение моделей с помощью конструктора
+  - Публикация моделей с помощью конструктора
+  
+  #### Лабораторная работа&#58; создание обучающего конвейера с помощью Azure ML Designer
+  #### Лабораторная работа&#58; развертывание службы с помощью Azure ML Designer
+  - После завершения этого модуля вы сможете
+  - Использование конструктора для подготовки модели машинного обучения
+  - Развертывание конвейера конструктора как службы.
 
-
-  ### Модуль 3&#58; Автоматизация машинного обучения с помощью службы AML
-  В этом модуле слушатели узнают о конвейере машинного обучения и о том, как службы AML AutoML и HyperDrive могут автоматизировать некоторые трудоемкие части.
+  ### Модуль 3&#58; Эксперименты и модели обучения
+  В этом модуле вы начнете проводить эксперименты, которые инкапсулируют обработку данных, моделируют обучающий код и используют их для подготовки моделей машинного обучения.
   #### Уроки
-  - Автоматизация выбора модели машинного обучения
-  - Автоматическая настройка гиперпараметра с помощью HyperDrive
-
-
-  ### Модуль 4&#58; Управление и мониторинг моделей машинного обучения с помощью службы AML
-  В этом модуле слушатели узнают, как автоматически управлять и отслеживать модели машинного обучения в службе AML.
+  - Введение в эксперименты
+  - Обучение и регистрация моделей
+  
+  #### Лабораторная работа&#58; проведение экспериментов
+  #### Лабораторная работа&#58; обучение и регистрация моделей
+  После завершения этого модуля вы сможете
+  - Запуск экспериментов на основе кода в рабочей области машинного обучения Azure.
+  - Обучение и регистрация моделей машинного обучения
+  
+  ### Модуль 4&#58; Работа с данными
+  Данные являются фундаментальным элементом любой рабочей нагрузки машинного обучения, поэтому в этом модуле вы узнаете, как создавать хранилища данных и наборы данных и управлять ими в рабочей области машинного обучения Azure, а также как использовать их в экспериментах по обучению модели.
   #### Уроки
-  - Управление и контроль моделей машинного обучения
+  - Работа с хранилищами данных
+  - Работа с наборами данных
+  
+  #### Лабораторная работа&#58; работа с хранилищами данных
+  #### Лабораторная работа&#58; работа с наборами данных
+  - После завершения этого модуля вы сможете
+  - Создание и использование хранилищ данных
+  - Создание и использование наборов данных
+  
+  
+  ### Модуль 5&#58; Вычисление контекстов
+  Одним из ключевых преимуществ облака является возможность увеличивать вычислительные ресурсы по требованию и использовать их для масштабирования процессов машинного обучения до такой степени, которая была бы невозможна на вашем собственном оборудовании. В этом модуле вы узнаете, как управлять средами эксперимента, которые обеспечивают согласованность во время выполнения экспериментов, и как создавать и использовать вычислительные цели для экспериментов.
+  #### Уроки
+  - Работа со средами
+  - Работа с вычислительными целями
+  
+  #### Лабораторная работа&#58; работа со средами
+  #### Лабораторная работа&#58; работа с вычислительными целями  
+  - После завершения этого модуля вы сможете
+  - Создание и использование сред
+  - Создание и использование вычислительных целей  
+  
+  ### Модуль 6&#58; Управление операциями с помощью конвейеров
+  Теперь, когда вы понимаете основы запуска рабочих нагрузок как экспериментов, которые заимствуют наборы данных и вычислительный ресурс, пришло время узнать, как организовать эти рабочие нагрузки в виде конвейеров из связанных шагов. Конвейеры - это ключ к реализации эффективного решения для операций с машинным обучением (ML Ops) в Azure, поэтому  в этом модуле вы узнаете, как их определить и запустить.
+  #### Уроки
+  - Введение в конвейеры
+  - Публикация и эксплуатация трубопроводов
+  
+  #### Лабораторная работа&#58; создание конвейера
+  #### Лабораторная работа&#58; публикация конвейера
+  - После завершения этого модуля вы сможете
+  - Создание конвейеров для автоматизации рабочих процессов машинного обучения.
+  - Публикация и запуск сервисов конвейера.
+  
+  ### Модуль 7&#58; Развертывание и использование моделей
+  Модели предназначены для облегчения принятия решений с помощью прогнозов, поэтому они будут полезны только если они развернуты и доступны для использования каким-либо приложением. В этом модуле вы узнаете, как развертывать модели для по логического вывода в реальном времени и для пакетного логического вывода.
+  #### Уроки
+  - Логический вывод реальном времени
+  - Пакетный логический вывод
+  
+  #### Лабораторная работа&#58; создание службы логического вывода в реальном времени
+  #### Лабораторная работа&#58; создание службы пакетного логического вывода
+  - После завершения этого модуля вы сможете
+  - Опубликуйте модель как сервис логического вывода в реальном времени.
+  - Опубликуйте модель как службу пакетного вывода
+  
+  ### Модуль 8&#58; Обучение оптимальных моделей
+  На этом этапе курса вы изучили сквозной процесс обучения, развертывания и использования моделей машинного обучения; но как вы гарантируете, что ваша модель дает лучшие прогнозирующие результаты для ваших данных? В этом модуле вы узнаете, как использовать настройку гиперпараметров и автоматизированное машинное обучение, чтобы воспользоваться преимуществами облачных вычислений и найти лучшую модель для ваших данных.
+  #### Уроки
+  - настройка гиперпараметра
+  - Автоматизированное машинное обучение
+  
+  #### Лабораторная работа&#58; настройка гиперпараметров
+  #### Лабораторная работа&#58; использование автоматизированного машинного обучения
+  - После завершения этого модуля вы сможете
+  - Оптимизируйте гиперпараметры для модельного обучения
+  - Используйте автоматическое машинное обучение, чтобы найти оптимальную модель для ваших данных
+  
+  ### Модуль 9&#58; Интерпретация моделей
+  Многие решения, принимаемые сегодня организациями и автоматизированными системами, основаны на прогнозах, сделанных моделями машинного обучения. Все более важно уметь понимать факторы, которые влияют на прогнозы, сделанные моделью, и уметь определять любые непреднамеренные искажения в поведении модели. Этот модуль описывает, как вы можете интерпретировать модели, чтобы объяснить, как важность функций определяет их прогнозы.
+  #### Уроки
+  - Введение в интерпретацию модели
+  - Использование Разъяснителя моделей
+  
+  #### Лабораторная работа&#58; обзор толкований автоматического машинного обучения
+  #### Лабораторная работа&#58; интерпретация моделей
+  - После завершения этого модуля вы сможете
+  - Сгенерируйте толкование модели с помощью автоматического машинного обучения
+  - Используйте Разъяснитель (Explainer) для интерпретации моделей машинного обучения.
+  
+  ### Модуль 10&#58; Мониторинг моделей
+  После того, как модель была развернута, важно понять, как эта модель используется в производстве, и обнаружить любое снижение ее эффективности из-за отклонения данных. Этот модуль описывает методы мониторинга моделей и их данных.
+  #### Уроки
+  - Мониторинг моделей  с применением Идей приложения (Application Insights)
+  - Мониторинг отклонения Данных
+  
+  #### Лабораторная работа&#58; мониторинг модели с помощью Идей приложения
+  #### Лабораторная работа&#58; мониторинг отклонения данных
+  - После завершения этого модуля вы сможете
+  - Используйте Application Insights для мониторинга опубликованной модели
+  - Проведите мониторинг отклонения данных
 
