--- a/learn-certs-pr/exams/70-537.yml
+++ b/learn-certs-pr/exams/70-537.yml
@@ -6,8 +6,7 @@ metadata:
 uid: exam.70-537
 displayName: 70-537
 summary: |-
-  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23:59 по центральному времени. После этой даты вы уже не сможете сдать этот экзамен. Вместо него доступен новый экзамен <a href='/learn/certifications/exams/AZ-600'>AZ-600</a>, сдача которого необходима для прохождения новой сертификации Microsoft Certified&#58; Azure Stack Hub Operator Associate.<br/><br/></strong></div>.
   </div>
 
   Кандидатами на прохождение этого экзамена являются администраторы Azure и операторы Azure Stack Hub, которые используют Azure Stack Hub для предоставления облачных служб своим конечным пользователям или клиентам из собственного центра обработки данных.
