--- a/learn-certs-pr/exams/az-304.yml
+++ b/learn-certs-pr/exams/az-304.yml
@@ -8,7 +8,7 @@ displayName: AZ-304
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен должны обладать специальными знаниями в области разработки и внедрения решений, работающих в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность. У кандидатов должны быть навыки среднего уровня по администрированию Azure. Кандидаты должны понимать разработку в Azure и процессы DevOps.
@@ -31,7 +31,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Проектирование мониторинга (10-15%)
 - Проектирование удостоверений и безопасности (25-30%)
 - Разработка хранилища данных (15-20%)
