--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -8,8 +8,7 @@ displayName: MB-200
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 1 июле 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  <div><strong>ЭТОТ ЭКЗАМЕН БУДЕТ ОТМЕНЕН 31 ДЕКАБРЯ 2020 ГОДА. Новый экзамен <a href="/learn/certifications/exams/pl-200"> PL-200</a> стал доступен в сентябре 2020 года. Примечание&#58; Экзамены будут отменены в 23&#58;59 по CST.</strong><br/><br/></div>
+  <div><strong>Этот экзамен был отменен 31 декабря 2020 года. Вместо него доступен новый экзамен PL-200. Более подробную информацию можно найти на <a href="/learn/certifications/exams/pl-200">странице сведений об экзамене PL-200</a>.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен являются функциональными консультантами, которые имеют доступ к функциям и функциям лицензированного продукта предприятия. Как функциональный консультант, кандидат знает о связанных версиях функций, но в основном не работает с этими продуктами.
@@ -17,20 +16,16 @@ summary: |-
   Кандидаты несут основную ответственность за настройку системы в соответствии с потребностями клиентов, выполнение задач проектирования, связанных с внедрением новых функций и возможностей, а также внедрение и тестирование изменений системы.
 
   Кандидаты планируют функциональный дизайн решений, реализуют процесс управления жизненным циклом приложений (ALM), переносят данные и объекты из устаревших и внешних систем, интегрируют Power Platform с другими системами и управляют средой Power Platform.
-
-  <div><strong><br/>В связи с отменой этого экзамена 31 декабря 2020 года Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse.</strong></div>
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: выполнение обнаружения, планирования и анализа; управление дизайном пользовательского интерфейса; управление объектами и данными; обеспечение безопасности; реализация интеграции, а также выполнение развертывания и тестирования решений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxb
 practiceTestUrl: https://www.mindhub.com/p/MU-MB-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-200&examname=Exam%20MB-200:%20Microsoft%20Dynamics%20365%20Customer%20Engagement%20Core&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-200
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 1 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Выполнение обнаружения, планирования и анализа (5-10%)
 - Управление проектированием пользовательского опыта (20-25%)
 - Управление объектами и данными (15-20%)
@@ -47,10 +42,7 @@ products:
 - dynamics-field-service
 - dynamics-customer-service
 exams:
-- uid: exam.mb-210
-- uid: exam.mb-220
-- uid: exam.mb-230
-- uid: exam.mb-240
+- uid: exam.mb-400
 courses:
 - uid: course.mb-200t00
 paths:
@@ -63,9 +55,7 @@ paths:
 - uid: learn-bizapps.extend-power-apps-portals
 relatedCertifications:
 - related:
-    uid: certification.d365-functional-consultant-sales
-- related:
-    uid: certification.d365-functional-consultant-customer-service
+    uid: certification.power-apps-and-d365-developer-associate
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
@@ -88,4 +78,3 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
-
