covid notification removed

--- a/learn-certs-pr/exams/az-101.yml
+++ b/learn-certs-pr/exams/az-101.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-101
 displayName: AZ-101
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 1 май 2019 года. Примечание: Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/></div>
+  <div><strong>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 1 май 2019 года. Примечание: Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></strong></div>
   
   Кандидатами на этот экзамен являются Azure Administrators, которые управляют облачными службами, которые охватывают возможности хранения, безопасности, сетей и вычислений в облаке. Кандидаты имеют глубокое понимание каждой службы в течение всего жизненного цикла IT и принимают запросы на инфраструктурные услуги, приложения и среды. Они дают рекомендации по использованию услуг для обеспечения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости. Кандидаты на этот экзамен должны обладать навыками использования PowerShell, интерфейса командной строки, портала Azure, шаблонов ARM, операционных систем, виртуализации, облачной инфраструктуры, структур хранения и сетей.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: защита идентификационных данных, оценка и выполнение миграции сервера в Azure, внедрение и управление приложениями, а также внедрение передовых виртуальных сетей.'
